Style slogan. Fix backbone models now that params wrapping is off in Rails.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -174,11 +174,22 @@ body {
 }
 
 .big-title {
+  transform: translateX(4px);
   font-size: 76px;
   margin: 40px;
+  margin-bottom: 10px;
   text-shadow: -7px 4px #ffff64;
   text-align: center;
   letter-spacing: 12px;
+}
+
+.small-slogan {
+  display: block;
+  font-family: "Open Sans", sans-serif;
+  font-size: 18px;
+  font-weight: lighter;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 .small-title {
